--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,10 +1,11 @@
 pipeline {
- agent {
+agent {
     docker {
-        image 'maven:3.9.3-eclipse-temurin-17'
-        args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+        image 'docker:24.0.5-cli'
+        args '-v /var/run/docker.sock:/var/run/docker.sock -v $HOME/.m2:/root/.m2'
     }
 }
+
 
   stages {
     stage('Checkout') {
